force-app/main/default/objects/TaskSetting__mdt/TaskSetting__mdt.object-meta.xml
<CustomObject>
    <description>This will help in mapping Customer Request to Tasks And Tasks to Tasks</description>
    <label>Task Setting</label>
    <pluralLabel>Task Settings</pluralLabel>
</CustomObject>