force-app/main/default/objects/TaskSetting__mdt/fields/CanCloseManually__c.field-meta.xml
<CustomField>
    <fullName>CanCloseManually__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Can the task be closed manually</description>
    <label>Can Close Manually</label>
    <type>Checkbox</type>
</CustomField>