force-app/main/default/objects/TaskSetting__mdt/fields/CanCreateManually__c.field-meta.xml
<CustomField>
    <fullName>CanCreateManually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can the task be created manually</description>
    <label>Can Create Manually</label>
    <type>Checkbox</type>
</CustomField>