force-app/main/default/objects/TaskSetting__mdt/fields/CreateCallType__c.field-meta.xml
<CustomField>
    <fullName>CreateCallType__c</fullName>
    <description>This will tell which task we can create  for which Activity/Task
values will be seperated by '|'</description>
    <label>Create Call Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>