force-app/main/default/objects/TaskSetting__mdt/fields/IsCallType__c.field-meta.xml
<CustomField>
    <fullName>IsCallType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this task a call type</description>
    <label>Is Call Type</label>
    <type>Checkbox</type>
</CustomField>