force-app/main/default/objects/TaskSetting__mdt/fields/IsTaskPerCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsTaskPerCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will define weather multiple one customer can have multiple tasks</description>
    <label>Is Task Per Customer</label>
    <type>Checkbox</type>
</CustomField>