force-app/main/default/objects/TaskSetting__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This should be same as ENUM name as we are mapping ENUM name to this field</description>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>