force-app/main/default/objects/TaskSetting__mdt/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <description>This Number is same as ENUM number in Code ,Make sure if you change anything in this metadata you need to change in apex code as well REF: ENUM order we are depending on ENUM order as ENUM order in code and rows in this settings are same</description>
    <label>No</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>