force-app/main/default/objects/TaskSetting__mdt/fields/RuleForActivity__c.field-meta.xml
<CustomField>
    <fullName>RuleForActivity__c</fullName>
    <description>This will define what rules to be applied while creating/Updating Task from activity</description>
    <label>Rule For Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>