force-app/main/default/objects/TaskSetting__mdt/fields/RuleForTask__c.field-meta.xml
<CustomField>
    <fullName>RuleForTask__c</fullName>
    <description>This will tell what rules to be applied while creating/Updating Tasks from Task(For user only this we are not reading in code we have rules defined in code but we check if this column is empty or not while applying rule)</description>
    <label>Rule For Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>