force-app/main/default/objects/TaskSetting__mdt/fields/TaskGroup__c.field-meta.xml
<CustomField>
    <fullName>TaskGroup__c</fullName>
    <description>Group of Tasks separated by '|'</description>
    <label>Task Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>