force-app/main/default/objects/TaskSetting__mdt/fields/TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>TaskSubject__c</fullName>
    <description>This field will be used for Naming the task subject</description>
    <label>Task Subject</label>
    <type>TextArea</type>
</CustomField>