force-app/main/default/objects/TaskSetting__mdt/fields/UpdateCallType__c.field-meta.xml
<CustomField>
    <fullName>UpdateCallType__c</fullName>
    <description>Update the call type tasks if we have any open call type tasks</description>
    <label>Update Call Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>